Exhibition visibility bug: on small width screens, action bar grabbed mouse input disallowed horizontal scrolling

--- a/exhibition_config/css/exhibition_visibility.css
+++ b/exhibition_config/css/exhibition_visibility.css
@@ -49,7 +49,7 @@ ul.visibility-list-table li {display:table-row;list-style:none;}
 .tree-indent {width:10px; display:inline-block;}
 #left_tree {width:65%; height:100%;}
 /*#advanced_hidden {width:100%; height :100%;}*/
-#action-bar {width:calc(100% - 390px); padding:35px 5px 5px 5px;display:inline;position:absolute;height:50px;}
+#action-bar {width:calc(100% - 390px); padding:0px 5px 5px 5px;margin:35px 0px 0px 0px;display:inline;position:absolute;height:50px;}
 .action-button {width:20%; padding:5px; display:inline; }
 .scroller-holder {position:absolute; top:0; right:0; height:100%;max-height:910px;float:right;width:380px;overflow-y:scroll;}
 /*overwrite default Drupal #page*/
